--- a/frontend/app/styles/general/_variables.sass
+++ b/frontend/app/styles/general/_variables.sass
@@ -1,4 +1,4 @@
-// Sidebar Dimensions
+// Sidebar
 $white: #fbfbfb
 $yellow: #ffd777
 $darkblue: #424a5d
@@ -21,6 +21,8 @@ $blue: #399ed9
 $darkerblue: #192029
 $darkblue: #2f3e4e
 $mediumblue: #4d5b6a
+$darkergray: #333638
+$darkgray: #a3a6a8
 $mediumgray: #cfdde3
 $lightgray: #ecf0f3
 
