--- a/frontend/app/styles/general/_voters.sass
+++ b/frontend/app/styles/general/_voters.sass
@@ -1,3 +1,57 @@
+// Placeholders
+
+::-webkit-input-placeholder
+	color: $darkgray !important
+
+.voter-edit-field-required::-webkit-input-placeholder
+	color: $darkergray !important
+
+.voter-edit-field-required::-webkit-input-placeholder
+	@extend .voter-edit-field-required
+
+// Title
+
+.voter-edit-title
+	margin-top: 0px
+	margin-bottom: 40px
+	text-align: center
+	font-size: 35px
+
+// Fields
+
+.voter-edit-field
+	font-size: 14px !important
+	border: none
+	border-radius: 4px !important
+	box-shadow: none
+	background: $lightgray
+	height: 35px !important
+	-webkit-box-shadow: none
+	box-shadow: none
+
+.voter-edit-field-required
+	@extend .voter-edit-field
+	background: $mediumgray
+
+.voter-edit-select
+	@extend .voter-edit-field
+	//border: 2px solid $mediumgray !important
+	border-radius: 4px
+
+.voter-edit-select-required
+	@extend .voter-edit-field
+	background: $mediumgray
+
+// Help container
+
 .help-container
     p
         font-size: 1.1em
+
+// Bootstrap
+
+.form-control[readonly]
+	@extend .voter-edit-field
+
+.form-signin
+	margin-bott: 5px
