--- a/frontend/app/templates/components/voter-edit-form.hbs
+++ b/frontend/app/templates/components/voter-edit-form.hbs
@@ -4,10 +4,26 @@
             <div>
                 <div class="vertical-offset-100 horizontal-padding">
                     <h3 class="voter-edit-title">{{form-title}}</h3>
-                    <h5 style="color:#55cec5;">*Campos requeridos en verde</h5>
                 </div>
             </div>
             <div class="panel-body">
+
+                <!-- REQUIRED KEY
+
+                    <h3></h3>
+                    <div class="form-group row">
+                        <div class="col-md-6 col-centered">
+                            <input type="text" style="padding:10px" placeholder="Obligatorio" class="form-control[readonly]} voter-edit-field-required" readonly="readonly">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-md-6 col-centered">
+                            <input type="text" style="padding:10px" placeholder="No Obligatorio" class="form-control[readonly]} voter-edit-field" readonly="readonly">
+                        </div>
+                    </div>
+
+                -->
+
                 <form {{action (if voter.id 'update' 'create') voter on="submit" }} accept-charset="UTF-8" role="form" class="form-signin">
                     <fieldset>
 
@@ -87,11 +103,11 @@
                             </div>
                             <div class="col-sm-2">
                                 <!--<label>Número Exterior:</label>-->
-                                {{input value=voter.outside_number placeholder="Número Ext." class="form-control voter-edit-field"}}
+                                {{input value=voter.outside_number placeholder="# Ext" class="form-control voter-edit-field"}}
                             </div>
                             <div class="col-sm-2">
                                 <!--<label>Número Interior:</label>-->
-                                {{input value=voter.inside_number placeholder="Número Int." class="form-control voter-edit-field"}}
+                                {{input value=voter.inside_number placeholder="# Int" class="form-control voter-edit-field"}}
                             </div>
                         </div>
                         <div class="form-gorup row">
@@ -158,20 +174,6 @@
                                 <!--<label>Teléfono Celular:<span class="text-danger">*</span></label>-->
                                 {{input type="number" min=0 required=true oninput="validity.valid||(value='');" value=voter.mobile_phone placeholder="Teléfono Celular" class="form-control voter-edit-field-required"}}
                             </div>
-                            <div class="col-sm-3">
-                                <!--<label>Clave de Municipio:<span class="text-danger">*</span></label>-->
-                                {{input type="number" min=0 required=true oninput="validity.valid||(value='');" value=voter.municipality_code placeholder="Municipio" class="form-control voter-edit-field"}}
-                            </div>
-                            <div class="col-sm-3">
-                                <!-- <label>Clave de Sección:<span>*</span></label>-->
-                                {{input type="number" required=true min=0 oninput="validity.valid||(value='');" value=voter.section placeholder="Sección" class="form-control voter-edit-field"}}
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <div class="col-md-8">
-                                <!--<label>Cuenta de Facebook:</label>-->
-                                {{input value=voter.facebook_account placeholder="URL Facebook" class="form-control voter-edit-field"}}
-                            </div>
                         </div>
                         <div class="form-group row">
                             <div class="col-md-4">
@@ -181,6 +183,12 @@
                             <div class="col-md-4">
                                 <!--<label>Correo Electrónico Alternativo:</label>--> 
                                 {{input type="email" value=voter.alternative_email placeholder="Email 2" class="form-control voter-edit-field"}}
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-md-8">
+                                <!--<label>Cuenta de Facebook:</label>-->
+                                {{input value=voter.facebook_account placeholder="URL Facebook" class="form-control voter-edit-field"}}
                             </div>
                         </div>
 
