--- a/frontend/app/templates/components/voter-edit-form.hbs
+++ b/frontend/app/templates/components/voter-edit-form.hbs
@@ -69,10 +69,17 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <div class="col-md-3">
-                                <!--<label>Fecha de Nacimiento:<span class="text-danger">*</span></label>-->
-                                {{bootstrap-datepicker value=voter.date_of_birth language="es" format="dd/mm/yyyy" required=true placeholder="Fecha de Nacimiento" class="form-control voter-edit-field-required"}}
-                            </div>
+                                <!--<label>Fecha de Nacimiento:</label>-->
+                                {{!-- {{bootstrap-datepicker value=voter.date_of_birth language="es" format="dd/mm/yyyy" required=true placeholder="Fecha de Nacimiento" class="form-control voter-edit-field-required"}} --}}
+                                <div class="col-md-3">
+                                {{input type="number" min=0  max=31 oninput="validity.valid||(value='');" value=dayOfBirth placeholder="Día de Nacimiento" required=true class="form-control voter-edit-field-required"}}
+                                </div>
+                                <div class="col-md-3">
+                                {{input type="number" min=0 max=12 oninput="validity.valid||(value='');" value=monthOfBirth placeholder="Mes de Nacimiento" required=true class="form-control voter-edit-field-required"}}
+                                </div>
+                                <div class="col-md-3">
+                                {{input type="number" min=1900 oninput="validity.valid||(value='');" value=yearOfBirth placeholder="Año de Nacimiento" required=true class="form-control voter-edit-field-required"}}
+                                </div>
                             <div class="col-md-2">
                                 <!--<label>Genero:<span class="text-danger">*</span></label>-->
                                 {{#x-select class="form-control voter-edit-select-required" value=voter.gender required=true on-change=(action "updateGender" voter) as |gnd|}} 
