Adds a couple more guidelines to the upload file page

--- a/frontend/app/templates/ine/upload-file.hbs
+++ b/frontend/app/templates/ine/upload-file.hbs
@@ -45,11 +45,13 @@
             </div>
             <p>El archivo a cargar debe ser guardado en formato CSV</p>
             <p>Para fechas, el formato debe de ser: 1 o 2 dígitos para día, 1 o 2 dígitos para mes y 4 dígitos para año, todos separados por "/" (sin las comillas)</p>
+            <p>Para los números de teléfono unicamente ingresar el número, sin paréntesis, "cel:", "ext:, etc."</p>
             <p>En lo posible evitar usar acentos y ñ</p>
             <p>Para cada persona utilizar una sola fila</p>
             <p>No cambiar el orden de las columnas del archivo muestra</p>
             <p>No agregar o quitar columnas </p>
             <p>Para datos extra que no estén en el archivo de formato agregarlo en notas</p>
+            <p>Para datos faltantes dejar la columna en blanco</p>
             <div class="text-center">
                 <btn {{action "downloadFormatFile"}} class="btn btn-success">Descargar Archivo de Formato</btn>
             </div>
