Changes to guidelines to acomodate 3 fields for date

--- a/frontend/app/templates/ine/upload-file.hbs
+++ b/frontend/app/templates/ine/upload-file.hbs
@@ -44,7 +44,8 @@
                 <h3>Ayuda</h3>
             </div>
             <p>El archivo a cargar debe ser guardado en formato CSV</p>
-            <p>Para fechas, el formato debe de ser: 1 o 2 dígitos para día, 1 o 2 dígitos para mes y 4 dígitos para año, todos separados por "/" (sin las comillas)</p>
+            <p>Para los el mes de nacimiento usar numeros (1 para enero, 2 para febrero y así hasta 12 para diciembre)</p>
+            <p>Para el año de nacimiento usar el año completo de cuatro dígitos (1999 en vez de 99)</p>
             <p>Para los números de teléfono unicamente ingresar el número, sin paréntesis, "cel:", "ext:, etc."</p>
             <p>En lo posible evitar usar acentos y ñ</p>
             <p>Para cada persona utilizar una sola fila</p>
