--- a/frontend/app/styles/general/_tables.sass
+++ b/frontend/app/styles/general/_tables.sass
@@ -2,6 +2,11 @@
   text-align: right
   padding: 10px 0
 
+.voters-table-links
+  float: left
+  margin-right: 20px;
+  font-size: 17px;
+
 .file-uploader-contanier
   text-align: center
   .file-uploader
