General style colors and voter edit form

--- a/frontend/app/styles/app/_parties-selection.sass
+++ b/frontend/app/styles/app/_parties-selection.sass
@@ -54,7 +54,7 @@
 	cursor: initial !important
 
 .active
-	background-color: $mediumgray !important
+	background-color: $lightgray !important
 	color: $darkblue !important
 
 .input-active
