--- a/frontend/app/styles/app/_projections.sass
+++ b/frontend/app/styles/app/_projections.sass
@@ -6,7 +6,7 @@
   position: fixed
   // box-shadow: 0 2px 5px 0 rgba(0,0,0,.26)
   border-right: 1px solid #d4d7dc
-  background-color: $lightgray
+  background-color: $white
 
 .projections-toolbar
   position: absolute
