--- a/frontend/app/styles/general/_variables.sass
+++ b/frontend/app/styles/general/_variables.sass
@@ -1,8 +1,4 @@
 // Sidebar
-$white: #fbfbfb
-$yellow: #ffd777
-$darkblue: #424a5d
-$lightblue: #6fa6cc
 $sidebar-width: 60px
 $sidebar-icon-size: 18px
 
@@ -15,19 +11,28 @@ $alertdarkred: #de2d0f
 $alertlightred: #f04124
 
 // Primary Palette
-$black: #211915
+$white: #fbfbfb
+$black: #2c2d30
 $aqua: #55cec5
-$blue: #399ed9
-$darkerblue: #192029
-$darkblue: #2f3e4e
-$mediumblue: #4d5b6a
-$darkergray: #333638
-$darkgray: #a3a6a8
-$mediumgray: #cfdde3
-$lightgray: #ecf0f3
 
-// Secondary Palette
+// Blue
+$lightblue: #6fa6cc
+$blue: #399ed9
+$mediumblue: #4d5b6a
+$darkblue: #2f3e4e
+$darkerblue: #192029
+
+// Gray
+$lightergray: #f9f9f9
+$lightgray: #e8e8e8
+$mediumgray: #717274
+$gray: #d5d5d6
+$darkgray: #4c4d50
+
+// Red
 $red: #c96269
 $darkred: #a65858
+
+// Cloud
 $cloud: #92c3d6
 $lightcloud: #c6dfe9
