Voter edit form margins

--- a/frontend/app/styles/general/_voters.sass
+++ b/frontend/app/styles/general/_voters.sass
@@ -38,13 +38,10 @@
 
 // Bootstrap
 .form-signin input[type="text"]
-	margin-bottom: 10px
+	margin-bottom: 8px
 
-.form-control[readonly]
-	@extend .voter-edit-field
-
-.form-signin
-	margin-bott: 5px
+.form-signin input[type="number"]
+	margin-bottom: 8px
 
 .panel-body
 	padding: 15px 0
