--- a/frontend/app/templates/components/voter-edit-form.hbs
+++ b/frontend/app/templates/components/voter-edit-form.hbs
@@ -31,7 +31,7 @@
                         <div class="form-group row">
                             <div class="form-group row" style="margin-bottom:0">
                                 <div class="col-md-8 col-md-offset-2">
-                                    <h4>Personal</h4>
+                                    <h4>Información Personal</h4>
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
                                     <label>Nombre</label>
@@ -54,7 +54,7 @@
                                     title="Por favor usa solo letras y no uses acentos ni simbolos exceptuando - y '" }}
                                 </div>
                             </div>
-                            <div class="form-group row">
+                            <div class="form-group row" style="margin-bottom:0">
                                 <div class="col-md-8 col-md-offset-2">
                                     <label>Fecha de Nacimiento</label>
                                 </div>
@@ -100,6 +100,13 @@
                                 <div class="col-md-3 col-md-offset-2">
                                     <label style="color:#d5d5d6">Núm. Interior</label>
                                     {{input value=voter.inside_number class="form-control voter-edit-field"}}
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="form-group row">
+                                <div class="col-md-8 col-md-offset-2">
+
                                 </div>
                             </div>
                         </div>
